--- a/devopsapi-api-gateway/src/main/resources/application.yaml
+++ b/devopsapi-api-gateway/src/main/resources/application.yaml
@@ -5,11 +5,18 @@ server:
 
 spring:
   application:
-    name: devops-api-gateway  
+    name: devopsapi-gateway
+  zipkin.base-url: http://localhost:8083/
   
+
+    
 eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8080/eureka
-    register-with-eureka: false
-    fetch-registry: false
+
+      
+  instance:
+    preferIpAddress: true
+    leaseRenewalIntervalInSeconds: 1
+    leaseExpirationDurationInSeconds: 2
