--- a/devopsapi-ms/pom.xml
+++ b/devopsapi-ms/pom.xml
@@ -14,5 +14,10 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.devopsapi</groupId>
+			<artifactId>devopsapi-commonutil</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
