--- a/devopsapi-commonutil/pom.xml
+++ b/devopsapi-commonutil/pom.xml
@@ -10,5 +10,9 @@
 	<artifactId>devopsapi-commonutil</artifactId>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-sleuth</artifactId>
+		</dependency>
 	</dependencies>
 </project>
