--- a/devopsapi-ms/pom.xml
+++ b/devopsapi-ms/pom.xml
@@ -19,5 +19,17 @@
 			<artifactId>devopsapi-commonutil</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		
+		<!--swagger -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.7.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.7.0</version>
+		</dependency>
 	</dependencies>
 </project>
