--- a/devopsapi-ds/pom.xml
+++ b/devopsapi-ds/pom.xml
@@ -31,5 +31,11 @@
 			<artifactId>springfox-swagger2</artifactId>
 			<version>2.7.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 </project>
