--- a/devopsapi-ds/src/main/resources/application.yaml
+++ b/devopsapi-ds/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ server:
 
 spring:
   application:
-    name: devops-ds  
+    name: devops-dataservice  
   
 eureka:
   client:
@@ -15,3 +15,4 @@ eureka:
     preferIpAddress: true
     leaseRenewalIntervalInSeconds: 1
     leaseExpirationDurationInSeconds: 2
+    
