--- a/devopsapi-ds/src/main/resources/application.yaml
+++ b/devopsapi-ds/src/main/resources/application.yaml
@@ -16,3 +16,15 @@ eureka:
     leaseRenewalIntervalInSeconds: 1
     leaseExpirationDurationInSeconds: 2
     
+    
+feign:
+  hystrix:
+    enabled: true   # 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"  # because springboot2.1. must be added, support access /actuator/hystrix.stream
+    
+
+    
