--- a/devopsapi-ds/src/main/resources/application.yaml
+++ b/devopsapi-ds/src/main/resources/application.yaml
@@ -5,7 +5,33 @@ server:
 
 spring:
   application:
-    name: devops-dataservice  
+    name: devops-dataservice
+  cloud:
+    service-registry:
+      auto-registration:
+        enabled: false  
+    
+    
+  datasource:
+    url: jdbc:h2:mem:testdb
+    driverClassName: org.h2.Driver
+    username: sa
+    password: password
+   
+
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    show-sql: true
+    properties:
+        hibernate:
+          format_sql: true
+          apply_to_ddl: false
+    
+
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
   
 eureka:
   client:
