added spring security

--- a/devopsapi-api-gateway/src/main/resources/application.yaml
+++ b/devopsapi-api-gateway/src/main/resources/application.yaml
@@ -6,8 +6,13 @@ server:
 spring:
   application:
     name: devopsapi-gateway
-  
+    
 
+  security:
+    user:
+      name: admin
+      password: 
+      
     
 eureka:
   client:
