--- a/devopsapi-ds/src/main/resources/application.yaml
+++ b/devopsapi-ds/src/main/resources/application.yaml
@@ -21,7 +21,7 @@ spring:
     url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
     username: sa
-    password: password
+    password: 
    
 
   jpa:
