--- a/devopsapi-ms/pom.xml
+++ b/devopsapi-ms/pom.xml
@@ -19,7 +19,12 @@
 			<artifactId>devopsapi-commonutil</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-activemq</artifactId>
+		</dependency>
+
 		<!--swagger -->
 		<dependency>
 			<groupId>io.springfox</groupId>
